deploy/target-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pgo-created-by: add-script
    pgo-installation-name: $PGO_INSTALLATION_NAME
    vendor: crunchydata
  name: $TARGET_NAMESPACE
