deploy/deplyoment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-operator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: postgres-operator
    spec:
      serviceAccountName: postgres-operator
      containers:
      - name: apiserver
        image: "$CO_IMAGE_PREFIX/pgo-apiserver:$CO_IMAGE_TAG"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
        volumeMounts:
        - mountPath: "/pgo-config"
          name: pgo-config
          readOnly: true
        - mountPath: "/pgo-auth-secret"
          name: pgo-auth-secret
          readOnly: true
      - name: operator
        image: "$CO_IMAGE_PREFIX/postgres-operator:$CO_IMAGE_TAG"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: "/pgo-config"
          name: pgo-config
          readOnly: true
      - name: scheduler
        image: "$CO_IMAGE_PREFIX/pgo-scheduler:$CO_IMAGE_TAG"
        volumeMounts:
        - mountPath: "/pgo-config"
          name: pgo-config
          readOnly: true
        resources: {}
        imagePullPolicy: IfNotPresent
      volumes:
      - name: pgo-config
        configMap:
          name: pgo-config
      - name: pgo-auth-secret
        secret:
          secretName: pgo-auth-secret
          defaultMode: 511
