deploy/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgres-operator
  namespace: demo
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  backend:
    serviceName: postgres-operator
    servicePort: 8443
